Set navigation width based on logo width; fix nav item wrapping
https://app.asana.com/0/164883087213679/164671092599690

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -283,7 +283,7 @@ header {
     position: fixed;
     z-index: 300;
     top: -60px;
-    height: 60px;
+    min-height: 60px;
     background-color: {{ theme.options.header.sticky.bg_color }};
     @include box-shadow(0 1px 2px rgba(0,0,0,0.4));
     @include transition(.4s top);
@@ -309,17 +309,33 @@ header {
       height: 100%;
       left: 15px;
 
+      a {
+        display: inline-block;
+        height: 100%;
+        color: transparent;
+
+        &:before {
+          content: ' ';
+          display: inline-block;
+          vertical-align: middle;
+          height: 100%;
+        }
+      }
+
       img {
         height: 50px;
-        margin-top: 5px;
         width: auto;
+        // using pseudo on the containing anchor tag to 
+        // center the image, this prevents additional CSS 
+        // from applying a margin and throwing things off
+        margin: 0 !important;
       }
     }
 
     #sticky-nav-wrapper {
       height: 100%;
       text-align: right;
-      padding: 0 15px;
+      padding: 0 14px;
 
       &:before {
         content: '';
@@ -333,11 +349,13 @@ header {
         max-width: 99%;
       }
 
-      nav, nav a {
+      nav, 
+      nav a {
         display: inline-block;
         vertical-align: middle;
         font-size: {{ theme.options.header.sticky.font_size }};
         color: {{ theme.options.header.sticky.color }};
+        line-height: 2rem;
 
         &:hover, &:active, &:focus {
           color: {{ theme.options.header.sticky.hover_color }};
@@ -348,15 +366,20 @@ header {
           {% endif %}
         }
 
-        ul.list-inline > li {
-          padding: 0 7px;
+        ul.list-inline {
+          margin-left: 0;
 
-          &:first-child {
-            padding-left: 0;
-          }
-
-          &:last-child {
+          > li {
+            padding-left: 15px;
             padding-right: 0;
+
+            &:first-child {
+              padding-left: 0;
+            }
+
+            &:last-child {
+              padding-right: 0;
+            }
           }
         }
 
